crates/rome_js_formatter/tests/specs/prettier/typescript/class/duplicates-access-modifier.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\class\\duplicates-access-modifier.ts"
---

# Input

```js
class Foo {
  public public a;
  private public b;
  protected private c;
  public protected d;
  public protected private e;
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,7 +1,7 @@
 class Foo {
-  public a;
-  private b;
-  protected c;
-  public d;
-  public e;
+  public public a;
+  private public b;
+  protected private c;
+  public protected d;
+  public protected private e;
 }
```

# Output

```js
class Foo {
  public public a;
  private public b;
  protected private c;
  public protected d;
  public protected private e;
}
```


# Errors
```
duplicates-access-modifier.ts:2:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:2:10
    │
  2 │   public public a;
    │          ^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:2:3
    │
  2 │   public public a;
    │   ^^^^^^
  
duplicates-access-modifier.ts:3:11 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:3:11
    │
  3 │   private public b;
    │           ^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:3:3
    │
  3 │   private public b;
    │   ^^^^^^^
  
duplicates-access-modifier.ts:4:13 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:4:13
    │
  4 │   protected private c;
    │             ^^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:4:3
    │
  4 │   protected private c;
    │   ^^^^^^^^^
  
duplicates-access-modifier.ts:5:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:5:10
    │
  5 │   public protected d;
    │          ^^^^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:5:3
    │
  5 │   public protected d;
    │   ^^^^^^
  
duplicates-access-modifier.ts:6:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:6:10
    │
  6 │   public protected private e;
    │          ^^^^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:6:3
    │
  6 │   public protected private e;
    │   ^^^^^^
  
duplicates-access-modifier.ts:6:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Accessibility modifier already seen.
  
  × duplicate modifier
  
    ┌─ duplicates-access-modifier.ts:6:20
    │
  6 │   public protected private e;
    │                    ^^^^^^^
  
  i first modifier
  
    ┌─ duplicates-access-modifier.ts:6:10
    │
  6 │   public protected private e;
    │          ^^^^^^^^^
  

```


